--- a/vignettes/references.bib
+++ b/vignettes/references.bib
@@ -54,10 +54,10 @@
 
 @misc{ahrq2025,
   author       = {Agency for Healthcare Research and Quality (AHRQ)},
-  title        = {Elixhauser Comorbidity Software Refined for ICD-10-CM Diagnoses, v2025.1},
+  title        = {Elixhauser Comorbidity Software Refined for ICD-10-CM Healthcare Cost and Utilization Project (HCUP)},
+  month        = {July},
   year         = {2025},
-  note         = {Available from: https://www.hcup-us.ahrq.gov/toolssoftware/comorbidityicd10/comorbidity_icd10.jsp},
-  url          = {https://www.hcup-us.ahrq.gov/toolssoftware/comorbidityicd10/comorbidity_icd10.jsp}
+  url          = {https://www.hcup-us.ahrq.gov:443/toolssoftware/comorbidityicd10/comorbidity_icd10.jsp}
 }
 
 @article{feinstein2018pccc,
