--- a/vignettes/references.bib
+++ b/vignettes/references.bib
@@ -57,7 +57,7 @@
   title        = {Elixhauser Comorbidity Software Refined for ICD-10-CM Healthcare Cost and Utilization Project (HCUP)},
   month        = {July},
   year         = {2025},
-  url          = {https://www.hcup-us.ahrq.gov:443/toolssoftware/comorbidityicd10/comorbidity_icd10.jsp}
+  url          = {https://hcup-us.ahrq.gov/toolssoftware/comorbidityicd10/comorbidity_icd10.jsp}
 }
 
 @article{feinstein2018pccc,
@@ -100,17 +100,14 @@
 }
 
 @article{glasheen2019,
-  author       = {Glasheen, Wayne P. and Cordier, Tami and Gumpina, Rama and Haugh, Graham and Davis, John and Renda, Anthony},
-  title        = {Charlson Comorbidity Index: ICD-9 Update and ICD-10 Translation},
-  journal      = {American Health & Drug Benefits},
-  year         = {2019},
-  volume       = {12},
-  number       = {4},
-  pages        = {188--197},
-  month        = {June--July},
-  pmid         = {31428236},
-  pmcid        = {PMC6684052},
-  url          = {https://pmc.ncbi.nlm.nih.gov/articles/PMC6684052/}
+  title={Charlson comorbidity index: ICD-9 update and ICD-10 translation},
+  author={Glasheen, William P and Cordier, Tristan and Gumpina, Rajiv and Haugh, Gil and Davis, Jared and Renda, Andrew},
+  journal={American health \& drug benefits},
+  volume={12},
+  number={4},
+  pages={188},
+  year={2019},
+  url = {https://pubmed.ncbi.nlm.nih.gov/31428236/}
 }
 
 @article{martin2022characteristics,
